<resources>
    <string name="app_name">OrdersApplication</string>
    <string name="orden_o_folio">Orden o folio</string>
    <string name="date_fefault">01-01-2024</string>
    <string name="asignadas">ASIGNADAS</string>
    <string name="no_asignadas">NO ASIGNADAS</string>
    <string name="aviso">Aviso</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="estas_seguro_de_cerrar_sesi_n">¿Estas seguro de cerrar sesión?</string>
    <string name="deseas_asignarte_esta_orden">¿Deseas asignarse esta orden?</string>
    <string name="orden">Orden:</string>
    <string name="inicio">Inicio:</string>
    <string name="modelo">Modelo:</string>
    <string name="placas">Placas:</string>
</resources>